--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -11,6 +11,9 @@
             color: rgb(88, 62, 88);
             font-size: larger;
         }
+        p {
+            color: rgb(226, 214, 43);
+        }
     </style>
 </head>
 <body>
@@ -18,6 +21,8 @@
     <p> Back to basics </p>
     <script>
         window.alert("Pai tá on")
+        window.confirm("Vai dominar javascript ?")
+        window.prompt("Como posso te chamar ?")
     </script>
 </body>
 </html>
