--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 4</title>
+    <title>Aula 6</title>
     <style>
         body {
             background-color: rgb(158, 97, 214);
@@ -21,9 +21,9 @@
     <h1>Jajai too</h1>
     <p> Back to basics </p>
     <script>
-        window.alert("Pai tá on")
-        window.confirm("Vai dominar javascript ?")
-        window.prompt("Como posso te chamar ?")
+       
+        var nome = window.prompt("Como posso te chamar ?")
+        window.alert("Salve, " + nome )
     </script>
-</body>
+</body> 
 </html>
