--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula 4</title>
+    <title>Aula 6</title>
     <style>
         body {
             background-color: rgb(158, 97, 214);
@@ -21,9 +21,10 @@
     <h1>Jajai too</h1>
     <p> Back to basics </p>
     <script>
-        window.alert("Pai tá on")
-        window.confirm("Vai dominar javascript ?")
-        window.prompt("Como posso te chamar ?")
+        var n1 = window.prompt("Digite um número: ")
+        var n2 = window.prompt("Digite outro número: ")
+        var s = Number(n1)  + Number(n2)
+        window.alert("Soma : " + s)
     </script>
-</body>
-</html>
+</body> 
+</html> 
