--- a/exercicios/exer1.html
+++ b/exercicios/exer1.html
@@ -7,11 +7,11 @@
     <title>Exercício 1</title>
     <style>
         body {
-            background-color: blanchedalmond;
+            background-color: rgb(229, 231, 103);
         }
 
         div#main {
-            background-color: rgb(230, 167, 73);
+            background-color: rgba(141, 73, 230, 0.795);
             width: 500px;
             height: 500px;
             display: flex;
@@ -23,7 +23,7 @@
         }
         
         img#foto{
-            opacity: 60%;
+            opacity: 70%;
         }
 
         h1{
@@ -39,9 +39,7 @@
             color: rgb(104, 72, 77);
         }
 
-        .container {
-            margin-top: -30px;
-        }
+
 
         .img-wrapper {
             position: relative;
@@ -54,7 +52,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 5em;
-            color: rgb(104, 72, 77);
+            color: rgb(229, 231, 103);
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
 
@@ -63,7 +61,6 @@
 <body>
     <div id="main">
         <div class="container">
-            <h1>Relógio</h1>
             <div class="img-wrapper">
                 <img src="/Curso em video/exercicios/img/tumblr_inline_ojdi5owLIY1r5gzmv_540.png" id="foto">
                 <div id="hora-atual"></div>
